--- a/2md/day171.md
+++ b/2md/day171.md
@@ -49,7 +49,19 @@
     - **谓语:** `is vanishing` (现在进行时，强调“正在消失”这一持续过程)
     - **词汇考点:** **`vanish`** (v. 消失，不见)，比 `disappear` 语气更强，带有彻底、无影无踪的意味。
 
-**结构嵌套总结:** 这个前置部分形成了“俄罗斯套娃”式的嵌套结构： `at a time` `└── when the working class... (修饰 time)` `└── frustrated that... (补充说明 the working class)` `└── the opportunity... is vanishing (解释 frustrated 的原因)` `└── that once defined America (修饰 opportunity)`
+**结构嵌套总结:** 
+
+这个前置部分形成了“俄罗斯套娃”式的嵌套结构：
+
+ `at a time` 
+
+`└── when the working class... (修饰 time)` 
+
+`└── frustrated that... (补充说明 the working class)`
+
+ `└── the opportunity... is vanishing (解释 frustrated 的原因)`
+
+ `└── that once defined America (修饰 opportunity)`
 
 ------
 
