--- a/2md/day172.md
+++ b/2md/day172.md
@@ -64,6 +64,4 @@
 4. **动词时态的精细化:** 深刻理解 **现在进行时被动语态** (`are/is being done`)，用它来描述一个正在发生的过程，可以使你的叙述更具动态感和现场感。
 5. **高级词汇:** `dot` (点缀)，`availability` (可用性，可获得性)。
 
-精炼翻译 (Refined Translation):
-
-“但这一信息在爱荷华州并未博得多少好感，在那里，风力涡轮机点缀于田野之间，贡献了全州36%的发电量——也正是在那里，清洁能源的可用性正吸引着微软等科技巨头前来建设他们的数据中心。”
+**精炼翻译 (Refined Translation):**“但这一信息在爱荷华州并未博得多少好感，在那里，风力涡轮机点缀于田野之间，贡献了全州36%的发电量——也正是在那里，清洁能源的可用性正吸引着微软等科技巨头前来建设他们的数据中心。”
