--- a/2md/day174.md
+++ b/2md/day174.md
@@ -32,10 +32,7 @@
 动词 `promise` 在这里采用了 `promise sb sth` 的句型。
 
 - `sb` (somebody) 是间接宾语，指动作的接收者。
-
-- sth (something) 是直接宾语，指动作的直接对象。
-
-  在这里，sth 不是一个简单的名词，而是一个由 that 引导的完整的从句。
+- `sth` (something) 是直接宾语，指动作的直接对象。 在这里，`sth` 不是一个简单的名词，而是一个由 `that` 引导的完整的从句。
 
 #### **语法考点 2: `that` 引导的宾语从句**
 
@@ -50,15 +47,10 @@
 
 #### **语法考点 3: 间接引语中的时态**
 
-为什么用 would not link 而不是 will not link？
-
-这是 间接引语 (Reported Speech) 的典型特征。主句动词 promised 是过去时，所以从句中的时态需要相应地“向过去推移”。
+为什么用 `would not link` 而不是 `will not link`？ 这是 **间接引语 (Reported Speech)** 的典型特征。主句动词 `promised` 是过去时，所以从句中的时态需要相应地“向过去推移”。
 
 - 原始承诺 (Direct Speech) 可能是: "We **will** not link phone numbers."
-
-- 转为间接引语 (Reported Speech) 后: ... promised that it would not link...
-
-  这是时态一致性原则 (Sequence of Tenses) 的体现，是语法考试中的高频考点。
+- 转为间接引语 (Reported Speech) 后: ... promised that it **would** not link... 这是时态一致性原则 (Sequence of Tenses) 的体现，是语法考试中的高频考点。
 
 #### **词汇与搭配 (Vocabulary & Collocation)**
 
@@ -115,6 +107,4 @@
 
 这句话的逻辑链条是：Facebook 先做出一个承诺（A），但（but）它几乎在交易达成的瞬间就违背了它（B）。通过使用间接引语、双宾语、时间状语从句以及强烈的转折关系，句子精准且极具批判性地揭示了事实。
 
-精炼翻译 (Refined Translation):
-
-“Facebook 当时向欧盟委员会承诺，不会将其用户的电话号码与Facebook身份信息相关联，然而这笔交易几乎刚一完成，它便背弃了这一诺言。”
+**精炼翻译 (Refined Translation):** “Facebook 当时向欧盟委员会承诺，不会将其用户的电话号码与Facebook身份信息相关联，然而这笔交易几乎刚一完成，它便背弃了这一诺言。”
