--- a/2md/day175.md
+++ b/2md/day175.md
@@ -82,6 +82,4 @@ be it lengthy retreats...
 4. **功能性平行结构:** 平行结构不一定要求语法形式完全一致，只要在功能上对等（如此处都是作“方法”的例子），同样可以构成有效的排比。
 5. **词汇搭配:** `the art of (doing) sth` (做某事的艺术/技巧)，`dedicated to` (致力于，专门用于)。
 
-精炼翻译 (Refined Translation):
-
-“要掌握深度工作的艺术，我们有诸多法门——无论是专门为特定任务而设的长期闭关；是培养一种日常仪式；抑或是采取一种‘记者式’的方法，在一天中随时抓住可以深度工作的片刻。”
+**精炼翻译 (Refined Translation):** “要掌握深度工作的艺术，我们有诸多法门——无论是专门为特定任务而设的长期闭关；是培养一种日常仪式；抑或是采取一种‘记者式’的方法，在一天中随时抓住可以深度工作的片刻。”
