--- a/2md/day176.md
+++ b/2md/day176.md
@@ -89,6 +89,4 @@ that divided undergraduates into two groups
    - `set out` (制定，阐述)
 5. **语态选择:** 根据想强调的焦点来选择主动或被动语态。想强调动作的承受者时，被动语态是更优的选择。
 
-精炼翻译 (Refined Translation):
-
-“《混乱：失序如何改变我们的生活》一书的作者蒂姆·哈福德，援引了20世纪80年代初的一项研究，该研究将本科生分成了两组：一部分学生被建议制定月度目标和学习活动；而另一部分则被要求日复一日地、更为详尽地规划其活动与目标。”
+**精炼翻译 (Refined Translation):** “《混乱：失序如何改变我们的生活》一书的作者蒂姆·哈福德，援引了20世纪80年代初的一项研究，该研究将本科生分成了两组：一部分学生被建议制定月度目标和学习活动；而另一部分则被要求日复一日地、更为详尽地规划其活动与目标。”
