--- a/reading/16.md
+++ b/reading/16.md
@@ -2,33 +2,33 @@
 <center>Text 1</center>
 &emsp;&emsp;It’s true that high-school coding classes aren’t essential for learning computer science in college. Students without experience can catch up after a few introductory courses, said Tom Cortina, the assistant dean at Carnegie Mellon’s School of Computer Science.
 
-&emsp;&emsp;However, Cortina said, early exposure is beneficial. When younger kids learn computer cience, they learn that it’s not just a confusing, endless string of letters and numbers—but a tool to build apps, or create artwork, or test hypotheses. It’s not as hard for them to transform their thought processes as it is for older students. Breaking down problems into bite-sized chunks and using code to solve them becomes normal. Giving more children this training could increase the number of people interested in the field and help fill the jobs gap, Cortina said.   
+&emsp;&emsp;However, Cortina said, early exposure is beneficial. When younger kids learn computer science, they learn that it’s not just a confusing, endless string of letters and numbers—but a tool to build apps, or create artwork, or test hypotheses. It’s not as hard for them to transform their thought processes as it is for older students. Breaking down problems into bite-sized chunks and using code to solve them becomes normal. Giving more children this training could increase the number of people interested in the field and help fill the jobs gap, Cortina said.   
 &emsp;&emsp;Students also benefit from learning something about coding before they get to college, where introductory computer-science classes are packed to the brim, which can drive the less-experienced or -determined students away.  
 &emsp;&emsp;The Flatiron School, where people pay to learn programming, started as one of the many coding bootcamps that’s become popular for adults looking for a career change. The high-schoolers get the same curriculum, but “we try to gear lessons toward things they’re interested in,” said Victoria Friedman, an instructor. For instance, one of the apps the students are developing suggests movies based on your mood.  
 &emsp;&emsp;The students in the Flatiron class probably won’t drop out of high school and build the next Facebook. Programming languages have a quick turnover, so the “Ruby on Rails” language they learned may not even be relevant by the time they enter the job market. But the skills they learn—how to think logically through a problem and organize the results—apply to any coding language, said Deborah Seehorn, an education consultant for the state of North Carolina.  
 &emsp;&emsp;Indeed, the Flatiron students might not go into IT at all. But creating a future army of coders is not the sole purpose of the classes. These kids are going to be surrounded by computers—in their pockets, in their offices, in their homes—for the rest of their lives. The younger they learn how computers think, how to coax the machine into producing what they want—the earlier they learn that they have the power to do that—the better.
 
-21. Cortina holds that early exposure to computer science makes it easier to  
+21. Cortina holds that early exposure to computer science makes it easier to _____.  
 [A] complete future job training.  
 [B] remodel the way of thinking.  
 [C] formulate logical hypotheses.  
 [D] perfect artwork production.  
-22. In delivering lessons for high-schoolers, Flatiron has considered their  
+22. In delivering lessons for high-schoolers, Flatiron has considered their _____.  
 [A] experience.  
 [B] interest.  
 [C] career prospects.  
 [D] academic backgrounds.  
-23. Deborah Seehorn believes that the skills learned at Flatiron will  
+23. Deborah Seehorn believes that the skills learned at Flatiron will _____.  
 [A] help students learn other computer languages.  
 [B] have to be upgraded when new technologies come.  
 [C] need improving when students look for jobs.  
 [D] enable students to make big quick money.  
-24. According to the last paragraph, Flatiron students are expected to  
+24. According to the last paragraph, Flatiron students are expected to _____.  
 [A] bring forth innovative computer technologies.  
 [B] stay longer in the information technology industry.  
 [C] become better prepared for the digitalized world.  
 [D] compete with a future army of programmers.  
-25. The word “coax” (Line 4, Para.6) is closest in meaning to  
+25. The word “coax” (Line 4, Para.6) is closest in meaning to _____.  
 [A] persuade.  
 [B] frighten.  
 [C] misguide.  
@@ -42,27 +42,27 @@
 &emsp;&emsp;Not everyone buys the win-win rhetoric. Some Congress members are trying to block the plan, and at least a dozen industry groups, four states, and three environmental groups are challenging it in federal court. Not surprisingly, industry groups and states generally argue it goes too far; environmentalists say it doesn’t go far enough. “The federal government is giving responsibility for managing the bird to the same industries that are pushing it to extinction,” says
 biologist Jay Lininger.  
 
-26. The major reason for listing the lesser prairie as threatened is  
+26. The major reason for listing the lesser prairie as threatened is _____.  
 [A] its drastically decreased population.  
 [B] the underestimate of the grassland acreage.  
 [C] a desperate appeal from some biologists.  
 [D] the insistence of private landowners.  
-27. The “threatened” tag disappointed some environmentalists in that it  
+27. The “threatened” tag disappointed some environmentalists in that it _____.  
 [A] was a give-in to governmental pressure.  
 [B] would involve fewer agencies in action.  
 [C] granted less federal regulatory power.  
 [D] went against conservation policies.  
-28. It can be learned from Paragraph 3 that unintentional harm-doers will not be prosecuted if they  
+28. It can be learned from Paragraph 3 that unintentional harm-doers will not be prosecuted if they _____.  
 [A] agree to pay a sum for compensation.  
 [B] volunteer to set up an equally big habitat.  
 [C] offer to support the WAFWA monitoring job.  
 [D] promise to raise funds for USFWS operations.  
-29. According to Ashe, the leading role in managing the species in  
+29. According to Ashe, the leading role in managing the species in _____.  
 [A] the federal government.  
 [B] the wildlife agencies.  
 [C] the landowners.  
 [D] the states.  
-30. Jay Lininger would most likely support  
+30. Jay Lininger would most likely support _____.  
 [A] industry groups.  
 [B] the win-win rhetoric.  
 [C] environmental groups.  
@@ -75,27 +75,27 @@ biologist Jay Lininger.
 &emsp;&emsp;In fact, “becoming more efficient” is part of the problem. Thinking of time as a resource to be maximised means you approach it instrumentally, judging any given moment as well spent only in so far as it advances progress toward some goal. Immersive reading, by contrast, depends on being willing to risk inefficiency, goallessness, even time-wasting. Try to slot it in as a to-do list item and you’ll manage only goal-focused reading—useful, sometimes, but not the most fulfilling kind. “The future comes at us like empty bottles along an unstoppable and nearly infinite conveyor belt,” writes Gary Eberle in his book Sacred Time, and “we feel a pressure to fill these different-sized bottles (days, hours, minutes) as they pass, for if they get by without being filled, we will have wasted them.” No mind-set could be worse for losing yourself in a book.  
 &emsp;&emsp;So what does work? Perhaps surprisingly, scheduling regular times for reading. You’d think this might fuel the efficiency mind-set, but in fact, Eberle notes, such ritualistic behaviour helps us “step outside time’s flow” into “soul time.” You could limit distractions by reading only physical books, or on single-purpose e-readers. “Carry a book with you at all times” can actually work, too—providing you dip in often enough, so that reading becomes the default state from which you temporarily surface to take care of business, before dropping back down. On a really good day, it no longer feels as if you’re “making time to read,” but just reading, and making time for everything else.  
 
-31. The usual time-management techniques don’t work because  
+31. The usual time-management techniques don’t work because _____.  
 [A] what they can offer does not ease the modern mind.  
 [B] what challenging books demand is repetitive reading.  
 [C] what people often forget is carrying a book with them.  
 [D] what deep reading requires cannot be guaranteed.  
-32. The “empty bottles” metaphor illustrates that people feel a pressure to  
+32. The “empty bottles” metaphor illustrates that people feel a pressure to _____.  
 [A] update their to-do lists.  
 [B] make passing time fulfilling.  
 [C] carry their plans through.  
 [D] pursue carefree reading.  
-33. Eberle would agree that scheduling regular times for reading helps  
+33. Eberle would agree that scheduling regular times for reading helps _____.  
 [A] encourage the efficiency mind-set.  
 [B] develop online reading habits.  
 [C] promote ritualistic reading.  
 [D] achieve immersive reading.  
-34. “Carry a book with you at all times” can work if  
+34. “Carry a book with you at all times” can work if _____.  
 [A] reading becomes your primary business of the day.  
 [B] all the daily business has been promptly dealt with.  
 [C] you are able to drop back to business after reading.  
 [D] time can be evenly split for reading and business.  
-35. The best title for this text could be  
+35. The best title for this text could be _____.  
 [A] How to Enjoy Easy Reading.  
 [B] How to Find Time to Read.  
 [C] How to Set Reading Goals.  
@@ -110,22 +110,22 @@ biologist Jay Lininger.
 &emsp;&emsp;Young and old converge on one key point: Overwhelming majorities of both groups said they believe it is harder for young people today to get started in life than it was for earlier generations. While younger people are somewhat more optimistic than their elders about the prospects for those starting out today, big majorities in both groups believe those “just getting started in life” face a tougher climb than earlier generations in reaching such signpost achievements as securing a good-paying job, starting a family, managing debt, and finding affordable housing.  
 &emsp;&emsp;Pete Schneider considers the climb tougher today. Schneider, a 27-year-old auto technician from the Chicago suburbs, says he struggled to find a job after graduating from college. Even now that he is working steadily, he said, “I can’t afford to pay my monthly mortgage payments on my own, so I have to rent rooms out to people to make that happen.” Looking back, he is struck that his parents could provide a comfortable life for their children even though neither had completed college when he was young. “I still grew up in an upper middle-class home with parents who didn’t have college degrees,” Schneider said. “I don’t think people are capable of that anymore.”  
 
-36. One cross-generation mark of a successful life is  
+36. One cross-generation mark of a successful life is _____.  
 [A] trying out different lifestyles.  
 [B] having a family with children.  
 [C] working beyond retirement age.  
 [D] setting up a profitable business.  
-37. It can be learned from Paragraph 3 that young people tend to  
+37. It can be learned from Paragraph 3 that young people tend to _____.  
 [A] favor a slower life pace.  
 [B] hold an occupation longer.  
 [C] attach importance to pre-marital finance.  
 [D] give priority to childcare outside the home.  
-38. The priorities and expectations defined by the young will  
+38. The priorities and expectations defined by the young will _____.  
 [A] become increasingly clear.  
 [B] focus on materialistic issues.  
 [C] depend largely on political preferences.  
 [D] reach almost all aspects of American life.  
-39. Both young and old agree that  
+39. Both young and old agree that _____.  
 [A] good-paying jobs are less available.  
 [B] the old made more life achievements.  
 [C] housing loans today are easy to obtain.  
