--- a/reading/18.md
+++ b/reading/18.md
@@ -1,252 +1,162 @@
-Text 1
-It is curious that Stephen Koziatek feels almost as though he has to justify his
-efforts to give his students a better future.
-Mr. Koziatek is part of something pioneering. He is a teacher at a New
-Hampshire high school where learning is not something of books and tests and
-mechanical memorization, but practical. When did it become accepted wisdom that
-students should be able to name the 13th president of the United States but be utterly
-overwhelmed by a broken bike chain?
-As Koziatek knows, there is learning in just about everything. Nothing is
-necessarily gained by forcing students to learn geometry at a graffitied desk stuck
-with generations of discarded chewing gum. They can also learn geometry by
-assembling a bicycle.
-But he's also found a kind of insidious prejudice. Working with your hands is
-seen as almost a mark of inferiority. Schools in the family of vocational education
-"have that stereotype…that it's for kids who can't make it academically," he says.
-On one hand, that viewpoint is a logical product of America's evolution.
+<center>Text 1</center>
+&emsp;&emsp;It is curious that Stephen Koziatek feels almost as though he has to justify his efforts to give his students a better future.  
+
+&emsp;&emsp;Mr. Koziatek is part of something pioneering. He is a teacher at a New Hampshire high school where learning is not something of books and tests and mechanical memorization, but practical. When did it become accepted wisdom that students should be able to name the 13th president of the United States but be utterly overwhelmed by a broken bike chain?  
+&emsp;&emsp;As Koziatek knows, there is learning in just about everything. Nothing is necessarily gained by forcing students to learn geometry at a graffitied desk stuck with generations of discarded chewing gum. They can also learn geometry by assembling a bicycle.  
+&emsp;&emsp;But he's also found a kind of insidious prejudice. Working with your hands is seen as almost a mark of inferiority. Schools in the family of vocational education "have that stereotype…that it's for kids who can't make it academically," he says.  
+&emsp;&emsp;On one hand, that viewpoint is a logical product of America's evolution.
 Manufacturing is not the economic engine that it once was. The job security that the
 US economy once offered to high school graduates has largely evaporated. More
-education is the new principle. We want more for our kids, and rightfully so.
-But the headlong push into bachelor's degrees for all— and the subtle devaluing
+education is the new principle. We want more for our kids, and rightfully so.  
+&emsp;&emsp;But the headlong push into bachelor's degrees for all— and the subtle devaluing
 of anything less— misses an important point: That's not the only thing the American
 economy needs. Yes, a bachelor's degree opens more doors. But even now, 54 percent
 of the jobs in the country are middle-skill jobs, such as construction and high-skill
-manufacturing. But only 44 percent of workers are adequately trained.
-In other words, at a time when the working class has turned the country on its
+manufacturing. But only 44 percent of workers are adequately trained.  
+&emsp;&emsp;In other words, at a time when the working class has turned the country on its
 political head, frustrated that the opportunity that once defined America is vanishing,
 one obvious solution is staring us in the face. There is a gap in working-class jobs, but
 the workers who need those jobs most aren't equipped to do them. Koziatek's
-Manchester School of Technology High School is trying to fill that gap.
-Koziatek's school is a wake-up call. When education becomes one-size-fits-all, it
+Manchester School of Technology High School is trying to fill that gap.  
+&emsp;&emsp;Koziatek's school is a wake-up call. When education becomes one-size-fits-all, it
 risks overlooking a nation's diversity of gifts.
 
-21. A broken bike chain is mentioned to show students'lack of
-A. practical ability
-B. academic training
-C. pioneering spirit
-D . mechamcal memonzat10n
-22. There exists the prejudice that vocational education is for kids who .
-A. have a stereotyped mind
-B. have no career mot1vation
-C. are not academically successful
-D. are financially disadvantaged
-23. We can infer from Paragraph 5 that high school graduates .
-A. used to have big financial concerns
-B. used to have more job opportunities
-C. are reluctant to work in manufacturing
-D. are entitled to more educational privileges
-24. The headlong push into bachelor's degrees for all .
-A. helps create a lot of middle-skill jobs
-B. may narrow the gap in working-class jobs
-C. is expected to yield a better-trained workforce
-D. indicates the overvaluing of higher education
-25. The author's attitude toward Koziatek's school can be described as
-A. supportive
-B. tolerant
-C. disappointed
-D. cautious
+21. A broken bike chain is mentioned to show students'lack of _____.  
+A. practical ability  
+B. academic training  
+C. pioneering spirit  
+D . mechamcal memonzation  
+22. There exists the prejudice that vocational education is for kids who _____.  
+A. have a stereotyped mind  
+B. have no career mot1vation  
+C. are not academically successful  
+D. are financially disadvantaged  
+23. We can infer from Paragraph 5 that high school graduates _____.  
+A. used to have big financial concerns  
+B. used to have more job opportunities  
+C. are reluctant to work in manufacturing  
+D. are entitled to more educational privileges  
+24. The headlong push into bachelor's degrees for all _____.  
+A. helps create a lot of middle-skill jobs  
+B. may narrow the gap in working-class jobs  
+C. is expected to yield a better-trained workforce  
+D. indicates the overvaluing of higher education  
+25. The author's attitude toward Koziatek's school can be described as _____.  
+A. supportive  
+B. tolerant  
+C. disappointed  
+D. cautious  
 
-Text2
-While fossil fuels - coal, oil, gas - still generate roughly 85 percent of the
-world's energy supply, it's clearer than ever that the future belongs to renewable
-sources such as wind and solar. The move to renewables is picking up momentum
-around the world: They now account for more than half of new power sources going
-on line.
-Some growth stems from a commitment by governments and farsighted
-businesses to fund cleaner energy sources. But increasingly the story is about the
-plummeting prices of renewables, especially wind and solar. The cost of solar panels
-has dropped by 80 percent and the cost of wind turbines by close to one-third in the
-past eight years.
-In many parts of the world renewable energy is already a principal energy
-source. In Scotland, for example, wind turbines provide enough electricity to
-power 95 percent of homes. While the rest of the world takes the lead, notably
-China and Europe, the United States is also seeing a remarkable shif t. In March, for
-the first time, wind and solar power accounted for more than 10 percent of the power
-generated in the US, reported the US Energy Information Administration.
-President Trump has underlined fossil fuels— especially coal— as the path to
-economic growth. In a recent speech in Iowa, he dismissed wind power as an
-unreliable energy source. But that message did not play well with many in Iowa,
-where wind turbines dot the fields and provide 36 percent of the state's electricity
-generation - and where tech giants like Microsoft are being attracted by the
-availability of clean energy to power their data centers.
-The question "what happens when the wind doesn't blow or the sun doesn't
-shine?" has provided a quick put-down for skeptics. But a boost in the storage
-capacity of batteries is making their ability to keep power flowing around the clock
-more likely.
-The advance is driven in part by vehicle manufacturers, who are placing big
+<center>Text 2</center>
+&emsp;&emsp;While fossil fuels - coal, oil, gas - still generate roughly 85 percent of the world's energy supply, it's clearer than ever that the future belongs to renewable sources such as wind and solar. The move to renewables is picking up momentum around the world: They now account for more than half of new power sources going on line.  
+
+&emsp;&emsp;Some growth stems from a commitment by governments and farsighted businesses to fund cleaner energy sources. But increasingly the story is about the plummeting prices of renewables, especially wind and solar. The cost of solar panels has dropped by 80 percent and the cost of wind turbines by close to one-third in the past eight years.  
+&emsp;&emsp;In many parts of the world renewable energy is already a principal energy source. In Scotland, for example, wind turbines provide enough electricity to power 95 percent of homes. While the rest of the world takes the lead, notably China and Europe, the United States is also seeing a remarkable shif t. In March, for the first time, wind and solar power accounted for more than 10 percent of the power generated in the US, reported the US Energy Information Administration.  
+&emsp;&emsp;President Trump has underlined fossil fuels— especially coal— as the path to economic growth. In a recent speech in Iowa, he dismissed wind power as an unreliable energy source. But that message did not play well with many in Iowa, where wind turbines dot the fields and provide 36 percent of the state's electricity generation - and where tech giants like Microsoft are being attracted by the availability of clean energy to power their data centers.  
+&emsp;&emsp;The question "what happens when the wind doesn't blow or the sun doesn't shine?" has provided a quick put-down for skeptics. But a boost in the storage capacity of batteries is making their ability to keep power flowing around the clock more likely.  
+&emsp;&emsp;The advance is driven in part by vehicle manufacturers, who are placing big
 bets on battery-powered electric vehicles. Although electric cars are still a rarity on
-roads now, this massive investment could change the picture rapidly in coming years.
-While there's a long way to go, the trend lines for renewables are spiking. The
+roads now, this massive investment could change the picture rapidly in coming years.  
+&emsp;&emsp;While there's a long way to go, the trend lines for renewables are spiking. The
 pace of change in energy sources appears to be speeding up — perhaps just in time
 to have a meaningful effect in slowing climate change. What Washington does— or
 doesn't do— to promote alternative energy may mean less and less at a time of a
 global shift in thought.
 
-26. The word "plummeting" (Line 3, Para. 2) is closest in meaning to .
-A. stabilizing
-B. changing
-C. falling
-D. nsmg
-27. According to Paragraph 3, the use of renewable energy in America .
-A. is progressing notably
-B. is as extensive as in Europe
-C. faces many challenges
-D. has proved to be impractical
-28. It can be learned that in Iowa, .
-A. B. wind is a widely used energy source
-wind energy has replaced fossil fuels
-C.
-tech giants are investing in clean energy
-D. there is a shortage of clean energy supply
+26. The word "plummeting" (Line 3, Para. 2) is closest in meaning to _____.  
+A. stabilizing  
+B. changing  
+C. falling  
+D. rising  
+27. According to Paragraph 3, the use of renewable energy in America _____.  
+A. is progressing notably  
+B. is as extensive as in Europe  
+C. faces many challenges  
+D. has proved to be impractical  
+28. It can be learned that in Iowa,  _____.  
+A. wind is a widely used energy source  
+B. wind energy has replaced fossil fuels  
+C. tech giants are investing in clean energy  
+D. there is a shortage of clean energy supply  
 29. Which of the following is true about clean energy according to Paragraphs 5&6 ?
-A. B. Its application has boosted battery storage.
-It is con皿only used in car manufacturing.
-C.
-Its continuous supply is becoming a reality.
-D. Its sustainable exploitation will remain difficult.
-30. It can be inferred from the last paragraph that renewable energy .
-A.
-will bring the US closer to other countries
-B.
-will accelerate global environmental change
-C. D.
-is not really encouraged by the US government
-is not competitive enough with regard to its cost
+A. Its application has boosted battery storage.  
+B. It is con皿only used in car manufacturing.  
+C. Its continuous supply is becoming a reality.  
+D. Its sustainable exploitation will remain difficult.  
+30. It can be inferred from the last paragraph that renewable energy _____.  
+A. will bring the US closer to other countries  
+B. will accelerate global environmental change  
+C. is not really encouraged by the US government  
+D. is not competitive enough with regard to its cost  
 
-Text3
-The power and ambition of the giants of the digital economy is astonishingAmazon
-has just announced the purchase of the upmarket grocery chain Whole
-Foods for $ 13.Sbn, but two years ago Facebook paid even more than that to
-acquire the WhatsApp messaging service, which doesn't have any physical
-product at all. What WhatsApp offered Facebook was an intricate and finely
-detailed web of its users' friendships and social lives.
-Facebook promised the European commission then that it would not link
-phone numbers to Facebook identities, but it broke the promise almost as soon as the
-deal went through. Even without knowing what was in the messages, the knowledge
-of who sent them and to whom was enormously revealing and still could be. What
-political journalist, what party whip, would not want to know the makeup of the
-WhatsApp groups in which Theresa May's enemies are currently plotting? It may be
-that the value of Whole Foods to Amazon is not so much the 460 shops it owns, but
-the records of which customers have purchased what.
-Competition law appears to be the only way to address these imbalances of
-power. But it is clumsy. For one thing, it is very slow compared to the pace of
-change within the digital economy. By the time a problem has been addressed and
-remedied it may have vanished in the marketplace, to be replaced by new abuses of
-power. But there is a deeper conceptual problem, too. Competition law as
-presently interpreted deals with financial disadvantage to consumers and this is not
-obvious when the users of these services don't pay for them. The users of their
-services are not their customers. That would be the people who buy advertising
-from them - and Facebook and Google, the two virtual giants, dominate digital
-advertising to the disadvantage of all other media and entertainment companies.
-The product they're selling is data, and we, the users, convert our lives to data
-for the benefit of the digital giants. Just as some ants farm the bugs called aphids for
-the honeydew they produce when they feed, so Google farms us for the data that
-our digital lives yield. Ants keep predatory insects away from where their aphids
-feed; Gmail keeps the spammers out of our inboxes. It doesn't feel like a human or
-democratic relationship, even if both sides benefit.
+<center>Text 3</center>
+&emsp;&emsp;The power and ambition of the giants of the digital economy is astonishingAmazon has just announced the purchase of the upmarket grocery chain Whole Foods for $ 13.Sbn, but two years ago Facebook paid even more than that to acquire the WhatsApp messaging service, which doesn't have any physical product at all. What WhatsApp offered Facebook was an intricate and finely detailed web of its users' friendships and social lives.  
 
-31. According to Paragraph 1, Facebook acquired WhatsApp for its .
-A. digital products
-B. user information
-C. physical assets
-D. quality service
-32. Linking phone numbers to Facebook identities may .
-A worsen political disputes
-B. mess up customer records
-C. pose a risk to Facebook users
-D. mislead the European commission
-33. According to the author, competition law .
-A. should serve the new market powers
-B.
-may worsen the economic imbalance
-C.
-should not provide just one legal solution
-D.
-cannot keep pace with the changing market
+&emsp;&emsp;Facebook promised the European commission then that it would not link phone numbers to Facebook identities, but it broke the promise almost as soon as the deal went through. Even without knowing what was in the messages, the knowledge of who sent them and to whom was enormously revealing and still could be. What political journalist, what party whip, would not want to know the makeup of the WhatsApp groups in which Theresa May's enemies are currently plotting? It may be that the value of Whole Foods to Amazon is not so much the 460 shops it owns, but the records of which customers have purchased what.  
+&emsp;&emsp;Competition law appears to be the only way to address these imbalances of power. But it is clumsy. For one thing, it is very slow compared to the pace of change within the digital economy. By the time a problem has been addressed and remedied it may have vanished in the marketplace, to be replaced by new abuses of power. But there is a deeper conceptual problem, too. Competition law as presently interpreted deals with financial disadvantage to consumers and this is not obvious when the users of these services don't pay for them. The users of their services are not their customers. That would be the people who buy advertising from them - and Facebook and Google, the two virtual giants, dominate digital advertising to the disadvantage of all other media and entertainment companies.  
+&emsp;&emsp;The product they're selling is data, and we, the users, convert our lives to data for the benefit of the digital giants. Just as some ants farm the bugs called aphids for the honeydew they produce when they feed, so Google farms us for the data that our digital lives yield. Ants keep predatory insects away from where their aphids feed; Gmail keeps the spammers out of our inboxes. It doesn't feel like a human or democratic relationship, even if both sides benefit.
+
+31. According to Paragraph 1, Facebook acquired WhatsApp for its _____.  
+A. digital products  
+B. user information  
+C. physical assets  
+D. quality service  
+32. Linking phone numbers to Facebook identities may _____.  
+A. worsen political disputes  
+B. mess up customer records  
+C. pose a risk to Facebook users  
+D. mislead the European commission  
+33. According to the author, competition law _____.  
+A. should serve the new market powers  
+B. may worsen the economic imbalance  
+C. should not provide just one legal solution  
+D. cannot keep pace with the changing market  
 34. B. Competition law as presently interpreted can hardly protect Facebook users
-because .
-A. C.
-D. they are not defined as customers
-they are not financially reliable
-the services are generally digital
-the services are paid for by advertisers
-35. The ants analogy is used to illustrate .
-A.
-a win-win business model between digital giants
-B.
-a typical competition pattern among digital giants
-C. D.
-the benefits provided for digital giants'customers
-the relationship between digital giants and their users
+because _____.  
+A. they are not defined as customers  
+B. they are not financially reliable  
+C. the services are generally digital  
+D. the services are paid for by advertisers  
+35. The ants analogy is used to illustrate _____.  
+A. a win-win business model between digital giants  
+B. a typical competition pattern among digital giants  
+C. the benefits provided for digital giants'customers  
+D. the relationship between digital giants and their users  
 
-Text4
-To combat the trap of putting a premium on being busy, Cal Newport, author of
-Deep Work: Rules for Focused Success in a Distracted World, recommends building a
-habit of "deep work" - the ability to focus without distraction.
-There are a number of approaches to mastering the art of deep work - be it
-lengthy retreats dedicated to a specific task; developing a daily ritual; or taking a
-"journalistic" approach to seizing moments of deep work when you can throughout
-the day. Whichever approach, the key is to determine your length of focus time and
-stick to it.
-Newport also recommends "deep scheduling" to combat constant interruptions
-and get more done in less time. "At any given point, I should have deep work
-scheduled for roughly the next month. Once on the calendar, I protect this time like I
-would a doctor's appointment or important meeting", he writes.
-Another approach to getting more done in less time is to rethink how you
-prioritise your day - in particular how we craft our to-do lists. Tim Harford, author of
-Messy: The Power of Disorder to Transform Our Lives, points to a study in the early
-1980s that divided undergraduates into two groups: some were advised to set out
-monthly goals and study activities; others were told to plan activities and goals in
-much more detail, day by day.
-While the researchers assumed that the well-structured daily plans would be
-most effective when it came to the execution of tasks, they were wrong: the detailed
-daily plans demotivated students. Harford argues that inevitable distractions often
-render the daily to-do list ineffective, while leaving room for improvisation in such a
-list can reap the best results.
-In order to make the most of our focus and energy, we also need to embrace
-downtime, or as Newport suggests, "be lazy".
-"Idleness is not just a vacation, an indulgence or a vice; it is as indispensable to
-the brain as vitamin D is to the body… [idleness] is, paradoxically, necessary to
-getting any work done," he argues.
-Srini Pillay, an assistant professor of psychiatry at Harvard Medical School,
-believes this counterintuitive link between downtime and productivity may be due to
-the way our brains operate. When our brains switch between being focused and
-unfocused on a task, they tend to be more efficient.
-"What people don't realise is that in order to complete these tasks they need to
-use both the focus and unfocus circuits in their brain," says Pillay.
+<center>Text 4</center>
+&emsp;&emsp;To combat the trap of putting a premium on being busy, Cal Newport, author of Deep Work: Rules for Focused Success in a Distracted World, recommends building a habit of "deep work" - the ability to focus without distraction.  
 
-36. The key to mastering the art of deep work is to .
-A. keep to your focus time
-B. list your immediate tasks
-C. make specific daily plans
-D. seize every minute to work
-37. The study in the early 1980s cited by Harford shows that .
-A. B. C. D. distractions may actually increase efficiency
-daily schedules are indispensable to studying
-students are hardly motivated by monthly goals
-detailed plans may not be as fruitful as expected
-38. According to Newport, idleness is .
-A. B. C. D. a desirable mental state for busy people
-a major contributor to physical health
-an effective way to save time and energy
-an essential factor in accomplishing any work
-39. Pillay believes that our brains' shift between being focused and unfocused .
-A. B. C. can result in psychological well-being
-can bring about greater efficiency
-is aimed at better balance in work
-D. is driven by task urgency
-40. This text is mainly about .
-A. B. C. D. ways to relieve the tension of busy life
-approaches to getting more done in less time
-the key to eliminating distractions
-the cause of the lack of focus time
+&emsp;&emsp;There are a number of approaches to mastering the art of deep work - be it lengthy retreats dedicated to a specific task; developing a daily ritual; or taking a "journalistic" approach to seizing moments of deep work when you can throughout the day. Whichever approach, the key is to determine your length of focus time and stick to it.
+&emsp;&emsp;Newport also recommends "deep scheduling" to combat constant interruptions and get more done in less time. "At any given point, I should have deep work scheduled for roughly the next month. Once on the calendar, I protect this time like I would a doctor's appointment or important meeting", he writes.  
+&emsp;&emsp;Another approach to getting more done in less time is to rethink how you prioritise your day - in particular how we craft our to-do lists. Tim Harford, author of Messy: The Power of Disorder to Transform Our Lives, points to a study in the early 1980s that divided undergraduates into two groups: some were advised to set out monthly goals and study activities; others were told to plan activities and goals in much more detail, day by day.  
+&emsp;&emsp;While the researchers assumed that the well-structured daily plans would be most effective when it came to the execution of tasks, they were wrong: the detailed daily plans demotivated students. Harford argues that inevitable distractions often render the daily to-do list ineffective, while leaving room for improvisation in such a list can reap the best results.  
+&emsp;&emsp;In order to make the most of our focus and energy, we also need to embrace downtime, or as Newport suggests, "be lazy".  
+&emsp;&emsp;"Idleness is not just a vacation, an indulgence or a vice; it is as indispensable to the brain as vitamin D is to the body… [idleness] is, paradoxically, necessary to getting any work done," he argues.  
+&emsp;&emsp;Srini Pillay, an assistant professor of psychiatry at Harvard Medical School, believes this counterintuitive link between downtime and productivity may be due to the way our brains operate. When our brains switch between being focused and unfocused on a task, they tend to be more efficient.  
+&emsp;&emsp;"What people don't realise is that in order to complete these tasks they need to use both the focus and unfocus circuits in their brain," says Pillay.  
+
+36. The key to mastering the art of deep work is to _____.  
+A. keep to your focus time  
+B. list your immediate tasks  
+C. make specific daily plans  
+D. seize every minute to work  
+37. The study in the early 1980s cited by Harford shows that _____.  
+A. distractions may actually increase efficiency  
+B. daily schedules are indispensable to studying  
+C. students are hardly motivated by monthly goals  
+D. detailed plans may not be as fruitful as expected  
+38. According to Newport, idleness is _____.  
+A. a desirable mental state for busy people  
+B. a major contributor to physical health  
+C. an effective way to save time and energy  
+D. an essential factor in accomplishing any work  
+39. Pillay believes that our brains' shift between being focused and unfocused _____.  
+A. can result in psychological well-being  
+B. can bring about greater efficiency  
+C. is aimed at better balance in work  
+D. is driven by task urgency  
+40. This text is mainly about _____.  
+A. ways to relieve the tension of busy life  
+B. approaches to getting more done in less time  
+C. the key to eliminating distractions  
+D. the cause of the lack of focus time  
