--- a/reading/19.md
+++ b/reading/19.md
@@ -7,27 +7,27 @@
 &emsp;&emsp;In a 2014 study, for example, Malti looked at 244 children. Using caregiver assessments and the children's self-observations, she rated each child's overall sympathy level and his or her tendency to feel negative emotions after moral transgressions. Then the kids were handed chocolate coins, and given a chance to share them with an anonymous child. For the low-sympathy kids, how much they shared appeared to tum on how inclined they were to feel guilty. The guilt-prone ones shared more, even though they hadn't magically become more sympathetic to the other child's deprivation.  
 &emsp;&emsp;"That's good news, " Malti says. "We can be prosocial because we caused harm and we feel regret."  
 
-21. Researchers think that guilt can be a good thing because it may help _____.  
+21. Researchers think that guilt can be a good thing because it may help ________.  
 [A] regulate a child's basic emotions  
 [B] improve a child's intellectual ability  
 [C] foster a child's moral development  
 [D] intensify a child's positive feelings  
-22. According to Paragraph 2, many people still consider guilt to be _____.  
+22. According to Paragraph 2, many people still consider guilt to be ________.  
 [A] deceptive  
 [B] burdensome  
 [C] addictive  
 [D] inexcusable  
-23. Yaish holds that the rethinking about guilt comes from an awareness that _____.  
+23. Yaish holds that the rethinking about guilt comes from an awareness that ________.  
 [A] emotions are context-independent  
 [B] emotions are socially constructive  
 [C] emotional stability can benefit health  
 [D] an emotion can play opposing roles  
-24. Malti and others have shown that cooperation and sharing _____.  
+24. Malti and others have shown that cooperation and sharing ________.  
 [A] may help correct emotional deficiencies  
 [B] can result from either sympathy or guilt  
 [C] can bring about emotional satisfaction  
 [D] may be the outcome of impulsive acts  
-25. The word "transgressions" (Line 4, Para.5) is closest in meaning to _____.  
+25. The word "transgressions" (Line 4, Para.5) is closest in meaning to ________.  
 [A] teachings  
 [B] discussions  
 [C] restnctions  
@@ -43,17 +43,17 @@
 &emsp;&emsp;The strategy also aims to ensure that carbon in woody material removed from the forests is locked away in the form of solid lumber or burned as biofuel in vehicles that would otherwise run on fossil fuels. New research on transportation biofuels is already under way.  
 &emsp;&emsp;State governments are well accustomed to managing forests, but traditionally they've focused on wildlife, watersheds and opportunities for recreation. Only recently have they come to see the vital part forests will have to play in storing carbon. California's plan, which is expected to be finalized by the governor next year, should serve as a model.  
 
-26. By saying "one of the harder challenges," the author implies that _____.  
+26. By saying "one of the harder challenges," the author implies that ________.  
 [A] global climate change may get out of control  
 [B] people may misunderstand global warning  
 [C] extreme weather conditions may arise  
 [D] forests may become a potential threat  
-27. To maintain forests as valuable "carbon sinks," we may need to _____.  
+27. To maintain forests as valuable "carbon sinks," we may need to ________.  
 [A] preserve the diversity of species in them  
 [B] accelerate the growth of young trees  
 [C] strike a balance among different plants  
 [D] lower their present carbon-absorbing capacity  
-28. California's Forest Carbon Plan endeavors to _____.  
+28. California's Forest Carbon Plan endeavors to ________.  
 [A] cultivate more drought-resistant trees  
 [B] reduce the density of some of its forests  
 [C] find more effective ways to kill insects  
@@ -63,7 +63,7 @@
 [B] To carry it out before the year of 2020.  
 [C] To perfect the emissions-permit auctions.  
 [D] To obtain enough financial support.  
-30. The author's attitude to California's plan can best be described as _____.  
+30. The author's attitude to California's plan can best be described as ________.  
 [A] ambiguous  
 [B] tolerant  
 [C] supportive  
@@ -81,27 +81,27 @@ and consumers will be the losers.
 &emsp;&emsp;In a 2012 survey, 7 1 percent of tree-fruit growers and almost 80 percent of raisin and berry growers said they were short of labor. Some western farmers have responded by moving operations to Mexico. From 1998 to 2000, 14.5 percent of the fruit Americans consumed was imported. Little more than a decade later, the share of imports was 25.8 percent.  
 &emsp;&emsp;In effect, the U.S. can import food or it can import the workers who pick it.  
 
-31. What problem should be addressed according to the first two paragraphs?
+31. What problem should be addressed according to the first two paragraphs?  
 [A] Discrimination against foreign workers in the U.S.  
 [B] Biased laws in favor of some American businesses.  
 [C] Flaws in U.S. immigration rules for farm workers.  
 [D] Decline of job opportunities in U.S. agriculture.  
-32. One trouble with U.S. agricultural workforce is _____.  
+32. One trouble with U.S. agricultural workforce is ________.  
 [A] the rising number of illegal immigrants  
 [B] the high mobility of crop workers  
 [C] the lack of experienced laborers  
 [D] the aging of immigrant farm workers  
-33. What is the much-argued solution to the labor shortage in U.S. farming?
+33. What is the much-argued solution to the labor shortage in U.S. farming?  
 [A] To attract younger laborers to farm work.  
 [B] To get native U.S. workers back to farming.  
 [C] To use more robots to grow high-value crops.  
 [D] To strengthen financial support for farmers.  
-34. Agricultural employers complain about the H-2A visa for its _____.  
+34. Agricultural employers complain about the H-2A visa for its ________.  
 [A] slow granting procedures  
 [B] limit on duration of stay  
 [C] tightened requirements  
 [D] control of annual admissions  
-35. Which of the following could be the best title for this text?
+35. Which of the following could be the best title for this text?  
 [A] U.S. Agriculture in Decline?  
 [B] Import Food or Labor?  
 [C] America Saved by Mexico?  
@@ -121,27 +121,27 @@ hold our governments and industries to account to push for real systemic change.
 &emsp;&emsp;DeSombre isn't saying people should stop caring about the environment. It's just that individual actions are too slow, she says, for that to be the only, or even primary, approach to changing widespread behavior.  
 &emsp;&emsp;None of this is about writing off the individual. It's just about putting things into perspective. We don't have time to wait. We need progressive policies that shape collective action (and rein in polluting businesses), alongside engaged citizens pushing for change.  
 
-36. Some celebrities star in a new video to _____.  
+36. Some celebrities star in a new video to ________.  
 [A] demand new laws on the use of plastics  
 [B] urge consumers to cut the use of plastics  
 [C] invite public opinion on the plastics crisis  
 [D] disclose the causes of the plastics crisis  
-37. The author is concerned that "moral licensing" may _____.  
+37. The author is concerned that "moral licensing" may ________.  
 [A] mislead us into doing worthless things  
 [B] prevent us from making further efforts  
 [C] weaken our sense of accomplishment  
 [D] suppress our desire for success  
-38. By pointing out our identity "citizens", the author indicates that _____.  
+38. By pointing out our identity "citizens", the author indicates that ________.  
 [A] our focus should be shifted to community welfare  
 [B] our relationship with local industries is improving  
 [C] we have been actively exercising our civil rights  
 [D] we should press our government to lead the combat  
-39. DeSombre argues that the best way for a collective change should be _____.  
+39. DeSombre argues that the best way for a collective change should be ________.  
 [A] a win-win arrangement  
 [B] a self-driven mechanism  
 [C] a cost-effective approach  
 [D] a top-down process  
-40. The author concludes that individual efforts _____.  
+40. The author concludes that individual efforts ________.  
 [A] can be too aggressive  
 [B] can be too inconsistent  
 [C] are far from sufficient  
