--- a/reading/20.md
+++ b/reading/20.md
@@ -8,27 +8,27 @@
 &emsp;&emsp;The readiness of the rats to befriend the social robot was surprising given its minimal design.The robot was the same size as a regular rat but resembled a simple plastic box on wheels. " We'd assumed we'd have to give it a moving head and tail, facial features, and put a scent on it to make it smell like a real rat, but that wasn't necessary, " says Janet Wiles at the University of Queensland in Australia, who helped with the research.
 &emsp;&emsp;The finding shows how sensitive rats are to social cues, even when they come from basic robots. says Wiles. Similarly, children tend to treat robots as if they are fellow beings, even when they display only simple social signals. "We humans seem to be fascinated by robots, and it turns out other animals are too," says Wiles.
 
-21. Quinn and her colleagues conducted a test to see if rats can
+21. Quinn and her colleagues conducted a test to see if rats can ________.  
 [A] pick up social signals from non-living rats  
 [B] distinguish a friendly rat from a hostile one  
 [C] attain sociable traits through special training  
 [D] send out warning messages to their fellows  
-22. What did the asocial robot do during the experiment?
+22. What did the asocial robot do during the experiment?  
 [A] It followed the social robot  
 [B] It played with some toys  
 [C] It set the trapped rats free  
 [D] It moved around alone  
-23. According to Quinn, the rats released the social robot because they
+23. According to Quinn, the rats released the social robot because they ________.  
 [A]tried to practice a means of escape  
 [B]expected it to do the same in return  
 [C]wanted to display their intelligence  
 [D]considered that an interesting game  
-24. James Wiles notes that rats
+24. James Wiles notes that rats ________.  
 [A]can remember other rats' facial features  
 [B]differentiate smells better than sizes  
 [C]respond more to actions than to looks  
 [D]can be scared by a plastic box on wheels  
-25. It can be learned from the text that rats
+25. It can be learned from the text that rats ________.  
 [A] appear to be adaptable to new surroundings  
 [B] are more socially active than other animals  
 [C] behave differently from children in socializing  
@@ -67,148 +67,96 @@ the expense of the rest of the company. And the stock market reacts positively w
 companies tie CEO pay to, say, stock prices, a sign that those practices build up
 corporate value not just for the CEO.
 
-26. Which of the following has contributed to CEO pay rise?
+26. Which of the following has contributed to CEO pay rise?  
 [A] The growth in the number of corporations  
 [B] The general pay rise with a better economy  
 [C] Increased business opportunities for top firms  
 [D] Close cooperation among leading economies  
-27. Compared with their predecessors, today' s CEOs are required to .
+27. Compared with their predecessors, today' s CEOs are required to ________.  
 [A] foster a stronger sense of teamwork  
 [B] finance more research and development  
 [C] establish closer ties with tech companies  
 [D] operate more globalized companies  
-28. CEO pay has been rising since the 1970s despite .
+28. CEO pay has been rising since the 1970s despite ________.  
 [A] continual internal opposition  
 [B] strict corporate governance  
 [C] conservative business strategies  
 [D] repeated government warnings  
-29. High CEO pay can be justified by the fact that it helps .
+29. High CEO pay can be justified by the fact that it helps ________.  
 [A] confirm the status of CEOs  
 [B] motive inside candidates  
 [C] boost the efficiency of CEOs  
 [D] increase corporate value  
-30. The most suitable title for this text would be
+30. The most suitable title for this text would be ________.  
 [A] CEOs Are Not Overpaid  
 [B] CEO Pay: Past and Present  
 [C] CEOs' Challenges of Today  
 [D] CEO Traits: Not Easy to Define  
 
 <center>Text 3</center>
-&emsp;&emsp;Madrid was hailed as a public health beacon last November when it rolled out
-ambitious restrictions on the most polluting cars. Seven months and one election day
-later, a new conservative city council suspended enforcement of the clean air zone, a
-first step toward its possible demise.
-&emsp;&emsp;Mayor Jose Luis Martinez-Almeida made opposition to the zone a centrepiece of
-his election campaign, despite its success in improving air quality. A judge has now
-overruled the city's decision to stop levying fines, ordering them reinstated. But with
-legal battles ahead, the zone's future looks uncertain at best.
-&emsp;&emsp;Among other weaknesses, the measures cities must employ when left to tackle
-dirty air on their own are politically contentious, and therefore vulnerable. That's
-because they inevitably put the costs of cleaning the air on to individual drivers—who
-must pay fees or buy better vehicles— rather than on to the car manufacturers whose
-cheating is the real cause of our toxic pollution.
-&emsp;&emsp;It's not hard to imagine a similar reversal happening in London. The new
-ultra-low emission zone (Ulez) is likely to be a big issue in next year's mayoral
-election. And if Sadiq khan wins and extends it to the North and South Circular roads
-in 2021 as he intends, it is sure to spark intense opposition from the far larger number
-of motorists who will then be affected.
-&emsp;&emsp;It's not that measures such as London's Ulez are useless. Far from it. Local
-officials are using the levers that are available to them to safeguard residents' health
-in the face of a serious threat. The zones do deliver some improvements to air quality,
-and the science tells us that means real health benefits— fewer heart attacks, strokes
-and premature births, less cancer, dementia and asthma. Fewer untimely deaths.
-But mayors and councilors can only do so much about a problem that is far
-bigger than any one city or town. They are acting because national governments—
-Britain's and others across Europe—have failed to do so.
-&emsp;&emsp;Restrictions that keep highly polluting cars out of certain areas— city centres,
-"school streets", even individual roads— are a response to the absence of a larger
-effort to properly enforce existing regulations and require auto companies to bring
-their vehicles into compliance. Wales has introduced special low speed limits
-to minimise pollution. We're doing everything but insist that manufacturers clean up
-their cars.
+&emsp;&emsp;Madrid was hailed as a public health beacon last November when it rolled out ambitious restrictions on the most polluting cars. Seven months and one election day later, a new conservative city council suspended enforcement of the clean air zone, a first step toward its possible demise.  
 
-31. Which of the following is true about Madrid's clean air zone?
+&emsp;&emsp;Mayor Jose Luis Martinez-Almeida made opposition to the zone a centrepiece of his election campaign, despite its success in improving air quality. A judge has now overruled the city's decision to stop levying fines, ordering them reinstated. But with legal battles ahead, the zone's future looks uncertain at best.  
+&emsp;&emsp;Among other weaknesses, the measures cities must employ when left to tackle dirty air on their own are politically contentious, and therefore vulnerable. That's because they inevitably put the costs of cleaning the air on to individual drivers—who must pay fees or buy better vehicles— rather than on to the car manufacturers whose cheating is the real cause of our toxic pollution.  
+&emsp;&emsp;It's not hard to imagine a similar reversal happening in London. The new ultra-low emission zone (Ulez) is likely to be a big issue in next year's mayoral election. And if Sadiq khan wins and extends it to the North and South Circular roads in 2021 as he intends, it is sure to spark intense opposition from the far larger number of motorists who will then be affected.  
+&emsp;&emsp;It's not that measures such as London's Ulez are useless. Far from it. Local officials are using the levers that are available to them to safeguard residents' health in the face of a  serious threat. The zones do deliver some improvements to air quality, and the science tells us that means real health benefits—fewer heart attacks, strokes and premature births, less cancer, dementia and asthma. Fewer untimely deaths. But mayors and councilors can only do so much about a problem that is far bigger than any one city or town. They are acting because national governments—Britain's and others across Europe—have failed to do so.  
+&emsp;&emsp;Restrictions that keep highly polluting cars out of certain areas— city centres, "school streets", even individual roads— are a response to the absence of a larger effort to properly enforce existing regulations and require auto companies to bring their vehicles into compliance. Wales has introduced special low speed limits to minimise pollution. We're doing everything but insist that manufacturers clean up their cars.  
+
+31. Which of the following is true about Madrid's clean air zone?  
 [A] Its effects are questionable  
 [B] It has been opposed by a judge  
 [C] It needs tougher enforcement  
 [D] Its fate is yet to be decided  
-32. Which is considered a weakness of the city-level measures to tackle dirty air?
+32. Which is considered a weakness of the city-level measures to tackle dirty air?  
 [A] They are biased against car manufacturers  
 [B] They prove impractical for city councils  
 [C] They are deemed too mild for politicians  
 [D] They put too much burden on individual motorists  
-33. The author believes that the extension of London's Ulez will
+33. The author believes that the extension of London's Ulez will ________.  
 [A] arouse strong resistance  
 [B] ensure Khan's electoral success  
 [C] improve the city's traffic  
 [D] discourage car manufacturing  
-34. Who does the author think should have addressed the problem?
+34. Who does the author think should have addressed the problem?  
 [A] Local residents  
 [B] Mayors  
 [C] Councilors  
 [D] National governments  
-35. It can be inferred from the last paragraph that auto companies .
+35. It can be inferred from the last paragraph that auto companies ________.  
 [A] will raise low-emission car production  
 [B] should be forced to follow regulations  
 [C] will upgrade the design of their vehicles  
 [D] should be put under public supervision  
 
 <center>Text 4</center>
-&emsp;&emsp;Now that members of Generation Z are graduating college this spring—the most
-commonly-accepted definition says this generation was born after 1995, give or take
-a year—the attention has been rising steadily in recent weeks. Gen Zs are about to hit
-the streets looking for work in a labor market that's tighter than it's been in decades.
-And employers are planning on hiring about 17 percent more new graduates for jobs
-in the U.S. this year than last, according to a survey conducted by the National
-Association of Colleges and Employers. Everybody wants to know how the people
-who will soon inhabit those empty office cubicles will differ from those who came
-before them.
-&emsp;&emsp;If "entitled" is the most con皿on adjective, fairly or not, applied to
-millennials (those born between 1981 and 1995), the catchwords for Generation
-Z are practical and cautious. According to the career counselors and experts who
-study them, Generation Zs are clear-eyed, economic pragmatists. Despite
-graduating into the best economy in the past 50 years, Gen Zs know what an
-economic train wreck looks like. They were impressionable kids during the crash
-of 2008, when many of their parents lost their jobs or their life savings or both.
-They aren't interested in taking any chances. The booming economy seems to
-have done little to assuage this underlying generational sense of anxious urgency,
-especially for those who have college debt. College loan balances in the U.S.
-now stand at a record $1.5 trillion, according to the Federal Reserve.
-&emsp;&emsp;One survey from Accenture found that 88 percent of graduating seniors this year
-chose their major with a job in mind. In a 2019 survey of University of Georgia
-students, meanwhile, the career office found the most desirable trait in a future
-employer was the ability to offer secure employment (followed by professional
-development and training, and then inspiring purpose). Job security or stability was
-the second most important career goal(work-life balance was number one), followed
-by a sense of being dedicated to a cause or to feel good about serving the greater good.
-&emsp;&emsp;That's a big change from the previous generation. "Millennials wanted more
-flexibility in their lives," notes Tanya Michelsen, Associate Director of Y outhSight, a
-UK-based brand manager that conducts .regular 60-day surveys of British youth, in
-findings that might just as well apply to American youth. "Generation Zs are looking
-for more certainty and stability, because of the rise of the gig economy. They have
-troubles seeing a financial future and they are quite risk averse."
+&emsp;&emsp;Now that members of Generation Z are graduating college this spring—the most commonly-accepted definition says this generation was born after 1995, give or take a year—the attention has been rising steadily in recent weeks. Gen Zs are about to hit the streets looking for work in a labor market that's tighter than it's been in decades. And employers are planning on hiring about 17 percent more new graduates for jobs in the U.S. this year than last, according to a survey conducted by the National Association of Colleges and Employers. Everybody wants to know how the people who will soon inhabit those empty office cubicles will differ from those who came
+before them.  
 
-36. Generation Zs graduating college this spring .
+&emsp;&emsp;If "entitled" is the most con皿on adjective, fairly or not, applied to millennials (those born between 1981 and 1995), the catchwords for Generation Z are practical and cautious. According to the career counselors and experts who study them, Generation Zs are clear-eyed, economic pragmatists. Despite graduating into the best economy in the past 50 years, Gen Zs know what an economic train wreck looks like. They were impressionable kids during the crash of 2008, when many of their parents lost their jobs or their life savings or both. They aren't interested in taking any chances. The booming economy seems to have done little to assuage this underlying generational sense of anxious urgency, especially for those who have college debt. College loan balances in the U.S. now stand at a record $1.5 trillion, according to the Federal Reserve.  
+&emsp;&emsp;One survey from Accenture found that 88 percent of graduating seniors this year chose their major with a job in mind. In a 2019 survey of University of Georgia students, meanwhile, the career office found the most desirable trait in a future employer was the ability to offer secure employment (followed by professional development and training, and then inspiring purpose). Job security or stability was the second most important career goal(work-life balance was number one), followed by a sense of being dedicated to a cause or to feel good about serving the greater good.  
+&emsp;&emsp;That's a big change from the previous generation. "Millennials wanted more flexibility in their lives," notes Tanya Michelsen, Associate Director of Y outhSight, a UK-based brand manager that conducts .regular 60-day surveys of British youth, in findings that might just as well apply to American youth. "Generation Zs are looking for more certainty and stability, because of the rise of the gig economy. They have troubles seeing a financial future and they are quite risk averse."  
+
+36. Generation Zs graduating college this spring ________.  
 [A] are recognized for their abilities  
 [B] are optimistic about the labor market  
 [C] are in favor of office job offers  
 [D] are drawing growing public attention  
-3 7. Generation Zs are keenly aware .
+37. Generation Zs are keenly aware ________.  
 [A] what their parents expect of them  
 [B] how valuable a counselor's advice is  
 [C] what a tough economic situation is like  
 [D] how they differ from past generations  
-38. The word "assuage"(line 9, para. 2) is closet in meaning to .
+38. The word "assuage"(line 9, para. 2) is closet in meaning to ________.  
 [A] deepen  
 [B] define  
 [C] maintain  
 [D] relieve  
-39. It can be learned from Paragraph 3 that Generation Zs—·
+39. It can be learned from Paragraph 3 that Generation Zs ________.  
 [A] give top priority to professional training  
 [B] have a clear idea about their future job  
 [C] care little about their job performance  
 [D] think it hard to achieve work-life balance  
-40. Michelsen thinks that compared with millennials, Generation Zs are .
+40. Michelsen thinks that compared with millennials, Generation Zs are ________.  
 [A] less realistic  
 [B] less adventurous  
 [C] more diligent  
