--- a/2md/october/day214.md
+++ b/2md/october/day214.md
@@ -2,6 +2,10 @@
 
 这是一个典型的考研长难句，特点是**“主句架子小，修饰成分多且长”**，并且使用了**“引语+谓语+主语”**的倒装结构。
 
+原句：
+
+“Millennials wanted more flexibility in their lives,” notes Tanya Michelsen, Associate Director of YouthSight, a UK-based brand manager that conducts regular 60-day surveys of British youth, in findings that might just as well apply to American youth.
+
 我们一步一步来拆解：
 
 
