--- a/2md/october/day215.md
+++ b/2md/october/day215.md
@@ -2,6 +2,10 @@
 
 这是一个典型的考研长难句，特点是**“主干清晰，但插入成分极多”**，导致你“找不到北”。
 
+原句：
+
+Equally, there is a sense that the travails of commuters in the South East, many of whom will face among the biggest rises, have received too much attention compared to those who must endure the relatively poor infrastructure of the Midlands and the North.
+
 我们按你的需求，分三步走：
 
 
