--- a/2md/november/day217.md
+++ b/2md/november/day217.md
@@ -1,5 +1,8 @@
 好的，我们来“榨干”这个句子。这是一个典型的考研长难句，主干清晰，但修饰成分（尤其是定语从句和`such as`的用法）是考点。
 
+原句：
+
+In 2007, Indonesia started phasing in a program that gives money to its poorest residents under certain conditions, such as requiring people to keep kids in school or get regular medical care.
 
 
 ### 1. 核心词汇与短语 (Words & Phrases)
