--- a/2md/november/day222.md
+++ b/2md/november/day222.md
@@ -2,6 +2,9 @@
 
 这句话的分析，我会**严格按照考研长难句的拆解步骤**进行。
 
+原句：
+
+Efforts in Canada and elsewhere have been arguably languid at best, and have given us a situation where we frequently hear of employers begging for workers, even at times and in regions where unemployment is high.
 
 
 ### 1. 核心词汇：扫清障碍
