--- a/2md/november/day224.md
+++ b/2md/november/day224.md
@@ -1,5 +1,9 @@
 好的，没问题。我们来“榨干”这个句子，这非常适合考研的需求。这个句子的结构确实很典型，包含了虚拟语气、插入语和非限制性定语从句。
 
+原句：
+
+Between them, the five biggest tech companies have spent an average of only $3.4 billion a year on sub-$1 billion acquisitions over the past five years—a drop in the ocean compared with their massive financial reserves, and the more than $130 billion of venture capital that was invested in the U.S. last year.
+
 ------
 
 
