--- a/2md/november/day224.md
+++ b/2md/november/day224.md
@@ -2,7 +2,8 @@
 
 原句：
 
-Between them, the five biggest tech companies have spent an average of only $3.4 billion a year on sub-$1 billion acquisitions over the past five years—a drop in the ocean compared with their massive financial reserves, and the more than $130 billion of venture capital that was invested in the U.S. last year.
+Even if we converted all the suitable land to fields of fruit and veg—which would involve taking out all the nature reserves and removing thousands of people from their homes—we would achieve only a 30 per cent boost in crop production.
+
 
 ------
 
