--- a/2md/november/day228.md
+++ b/2md/november/day228.md
@@ -2,6 +2,10 @@
 
 我们要把这个句子像剥洋葱一样剥开，提取出对你有用的“考点”和“逻辑”。
 
+原句：
+
+In one study, participants completed a battery of eight tasks, including four that tapped reflective thinking (discerning rules, comprehending vocabulary) and four that tapped intuition and creativity (generating new products or figures of speech).
+
 ------
 
 
