--- a/2md/november/day229.md
+++ b/2md/november/day229.md
@@ -2,6 +2,10 @@
 
 以下是针对这条句子的深度复盘：
 
+原句：
+
+Certain artifacts are especially vulnerable because some pioneers in plastic art didn’t always know how to mix ingredients properly, says Thea van Oosten, a polymer chemist who, until retiring a few years ago, worked for decades at the Cultural Heritage Agency of the Netherlands.
+
 ------
 
 
