--- a/2md/november/day230.md
+++ b/2md/november/day230.md
@@ -4,6 +4,10 @@
 
 以下是为你拆解的详细考点报告：
 
+原句：
+
+Joana Lia Ferreira, an assistant professor of conservation and restoration at the NOVA School of Science and Technology, notes that archaeologists first defined the great material ages of human history—Stone Age, Iron Age, and so on—after examining artifacts in museums.
+
 ------
 
 
