--- a/2md/november/day231.md
+++ b/2md/november/day231.md
@@ -2,6 +2,10 @@
 
 我将完全按照你的要求，不整花哨的翻译，而是帮你把这个句子的“骨髓”敲出来。
 
+原句：
+
+As the latest crop of students pen their undergraduate application form and weigh up their options, it may be worth considering just how the point, purpose and value of a degree has changed and what Generation Z need to consider as they start the third stage of their educational journey.
+
 ------
 
 
