--- a/2md/november/day232.md
+++ b/2md/november/day232.md
@@ -2,6 +2,10 @@
 
 这句话是典型的**考研英语阅读逻辑长句**，重点在于**否定与转折**以及**并列从句**的识别。
 
+原句：
+
+This is not to say that there is no point in getting a degree, but rather stress that a degree is not for everyone, that the switch from classroom to lecture hall is not an inevitable one and that other options are available.
+
 ------
 
 
